# mosaicterm

./: .gitignore  .markdownlint-cli2.yaml  .pre-commit-config.yaml  CODE_REVIEW.md  Cargo.toml  LICENSE  README.md  claude.md  clippy.toml  rustfmt.toml  tarpaulin.toml
.agents/skills/code-review/: skill.md
.agents/skills/issue-triage/: skill.md
.agents/skills/submit-pr/: skill.md
.cursor/: README.md  constitution.md
.github/: dependabot.yml
.github/scripts/: build-macos-app.sh
.github/workflows/: ci.yml  release.yml
.specify/memory/: constitution.md
benches/: performance.rs
docs/: ARCHITECTURE.md  CONFIGURATION.md  CUSTOM_PROMPT.md  DOCUMENTATION_COMPLETED.md  INTERACTIVE_PROGRAMS.md  PTY_MANAGER_V2_MIGRATION.md  QUICKSTART.md  ROADMAP.md  ROADMAP_INTERACTIVE_SUPPORT.md  STATE_MANAGER_MIGRATION_STATUS.md  THEMING.md  WINDOW_TITLE_STATUS.md
mosaicterm-lib/: Cargo.toml
mosaicterm-lib/src/: ansi.rs  commands.rs  error.rs  events.rs  lib.rs  state.rs
mosaicterm-lib/src/config/: loader.rs  mod.rs  shell.rs  theme.rs
mosaicterm-lib/src/models/: mod.rs  output_line.rs  pty_process.rs  terminal_session.rs
mosaicterm-lib/src/pty/: manager.rs  mod.rs  signals.rs  streams.rs
mosaicterm-lib/src/terminal/: ansi_parser.rs  input.rs  mod.rs  output.rs  prompt.rs  state.rs
mosaicterm-lib/src/ui/: blocks.rs  input.rs  mod.rs  scroll.rs  text.rs  viewport.rs
specs/001-mosaicterm-terminal-emulator/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-mosaicterm-terminal-emulator/contracts/: README.md  command-execution.md  pty-lifecycle.md  ui-rendering.md
src/: ansi.rs  app.rs  app.rs.bak  commands.rs  completion.rs  context.rs  error.rs  events.rs  history.rs  lib.rs  main.rs  security_audit.rs  state.rs  state_manager.rs
src/app/: async_ops.rs  commands.rs  context.rs  input.rs  mod.rs  pane_tree.rs  prompt.rs  ssh.rs
src/config/: loader.rs  mod.rs  prompt.rs  shell.rs  theme.rs  watcher.rs
src/execution/: mod.rs
src/models/: command_block.rs  config.rs  mod.rs  output_line.rs  pty_process.rs  shell_type.rs  terminal_session.rs
src/platform/: mod.rs  traits.rs
src/platform/unix/: filesystem.rs  memory.rs  mod.rs  paths.rs  process.rs  shell.rs  signals.rs
src/platform/windows/: filesystem.rs  memory.rs  mod.rs  paths.rs  process.rs  shell.rs  signals.rs
src/pty/: events.rs  manager.rs  manager_v2.rs  mod.rs  operations.rs  process.rs  process_tree.rs  shell_state.rs  signals.rs  streams.rs
src/session/: mod.rs  tmux_backend.rs
src/terminal/: ansi_parser.rs  input.rs  mod.rs  output.rs  prompt.rs  state.rs
src/ui/: blocks.rs  colors.rs  completion_popup.rs  input.rs  metrics.rs  mod.rs  scroll.rs  ssh_prompt_overlay.rs  text.rs  tui_overlay.rs  viewport.rs
tests/contract/: test_command_execution.rs  test_pty_lifecycle.rs  test_ui_rendering.rs
tests/integration/: test_ansi_colors.rs  test_basic_commands.rs  test_cli_tools.rs  test_command_flows.rs  test_error_handling.rs  test_large_output.rs  test_zsh_integration.rs
tests/proptest/: test_ansi_parser_props.rs  test_command_validation_props.proptest-regressions  test_command_validation_props.rs  test_output_processing_props.proptest-regressions  test_output_processing_props.rs
tests/security/: test_password_isolation.rs
tests/test_utils/: fixtures.rs  mock_pty.rs  mock_terminal.rs  mod.rs
tests/unit/: mod.rs  test_ansi_parser.rs  test_command_validation.rs  test_output_processing.rs
