[package]
name = "mosaicterm"
version = "0.1.1"
edition = "2021"
authors = ["David Danielsson"]
description = "A Rust GUI terminal emulator inspired by Warp with block-based command history"
license = "MIT"
keywords = ["terminal", "emulator", "gui", "rust", "cli"]
categories = ["command-line-utilities", "gui"]
repository = "https://github.com/djdanielsson/mosaicterm"
homepage = "https://github.com/djdanielsson/mosaicterm"

[dependencies]
# GUI Framework
egui = "0.24"
eframe = { version = "0.24", features = ["persistence"] }

# PTY and Terminal
portable-pty = "0.8"
vte = "0.13"

# Serialization and Configuration
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Async Runtime
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
async-trait = "0.1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utility
anyhow = "1.0"
thiserror = "1.0"
regex = "1.10"
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "5.0"
nix = { version = "0.27", features = ["signal"] }
git2 = "0.18"
image = { version = "0.25", default-features = false, features = ["png"] }
arboard = "3.4"
hostname = "0.4"
notify = "6.1"

[dev-dependencies]
# Testing
tokio-test = "0.4"
tempfile = "3.0"
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.4"

[[bench]]
name = "performance"
harness = false

# Integration tests
[[test]]
name = "test_basic_commands"
path = "tests/integration/test_basic_commands.rs"

[[test]]
name = "test_command_flows"
path = "tests/integration/test_command_flows.rs"

[[test]]
name = "test_large_output"
path = "tests/integration/test_large_output.rs"

[[test]]
name = "test_error_handling"
path = "tests/integration/test_error_handling.rs"

# Contract tests
[[test]]
name = "test_command_execution"
path = "tests/contract/test_command_execution.rs"

[[test]]
name = "test_pty_lifecycle"
path = "tests/contract/test_pty_lifecycle.rs"

[[test]]
name = "test_ui_rendering"
path = "tests/contract/test_ui_rendering.rs"

# Unit tests
[[test]]
name = "test_ansi_parser"
path = "tests/unit/test_ansi_parser.rs"

[[test]]
name = "test_output_processing"
path = "tests/unit/test_output_processing.rs"

[[test]]
name = "test_command_validation"
path = "tests/unit/test_command_validation.rs"

# Test utilities
[[test]]
name = "test_mock_pty"
path = "tests/test_utils/mock_pty.rs"

[[test]]
name = "test_mock_terminal"
path = "tests/test_utils/mock_terminal.rs"

[[test]]
name = "test_fixtures"
path = "tests/test_utils/fixtures.rs"

# Property-based tests
[[test]]
name = "test_ansi_parser_props"
path = "tests/proptest/test_ansi_parser_props.rs"

[[test]]
name = "test_command_validation_props"
path = "tests/proptest/test_command_validation_props.rs"

[[test]]
name = "test_output_processing_props"
path = "tests/proptest/test_output_processing_props.rs"

[profile.dev]
opt-level = 1
debug = true
overflow-checks = true
incremental = true

[profile.dev-release]
inherits = "release"
opt-level = 2
debug = true
lto = false
codegen-units = 4
panic = "unwind"

[profile.release]
opt-level = 3
debug = false
lto = true
codegen-units = 1
panic = "abort"
strip = true
