[package]
name = "mosaicterm"
version = "0.3.0"
edition = "2021"
authors = ["David Danielsson"]
description = "A Rust GUI terminal emulator inspired by Warp with block-based command history"
license = "MIT"
keywords = ["terminal", "emulator", "gui", "rust", "cli"]
categories = ["command-line-utilities", "gui"]
repository = "https://github.com/djdanielsson/mosaicterm"
homepage = "https://github.com/djdanielsson/mosaicterm"

[dependencies]
# GUI Framework
# Note: egui is re-exported by eframe, use eframe::egui for consistency
eframe = { version = "0.24", features = ["persistence"] }

# PTY and Terminal
portable-pty = "0.9"
vte = "0.15"

# Serialization and Configuration
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.9"

# Async Runtime
tokio = { version = "1.49", features = ["full"] }
futures = "0.3"
async-trait = "0.1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utility
anyhow = "1.0"
thiserror = "2.0"
regex = "1.12"
uuid = { version = "1.20", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "6.0"
once_cell = "1.19"
nix = { version = "0.30", features = ["signal"] }
git2 = "0.20"
openssl-sys = { version = "0.9", features = ["vendored"] }
image = { version = "0.25", default-features = false, features = ["png"] }
arboard = "3.4"
hostname = "0.4"
notify = "8.2"
zeroize = "1.8"

# Windows-specific dependencies
[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_Console",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_ProcessStatus",
] }

[dev-dependencies]
# Testing
tokio-test = "0.4"
tempfile = "3.24"
criterion = { version = "0.8", features = ["html_reports"] }
proptest = "1.10"

[[bench]]
name = "performance"
harness = false

# Integration tests
[[test]]
name = "test_basic_commands"
path = "tests/integration/test_basic_commands.rs"

[[test]]
name = "test_command_flows"
path = "tests/integration/test_command_flows.rs"

[[test]]
name = "test_large_output"
path = "tests/integration/test_large_output.rs"

[[test]]
name = "test_error_handling"
path = "tests/integration/test_error_handling.rs"

# Contract tests
[[test]]
name = "test_command_execution"
path = "tests/contract/test_command_execution.rs"

[[test]]
name = "test_pty_lifecycle"
path = "tests/contract/test_pty_lifecycle.rs"

[[test]]
name = "test_ui_rendering"
path = "tests/contract/test_ui_rendering.rs"

# Security tests
[[test]]
name = "test_password_isolation"
path = "tests/security/test_password_isolation.rs"

# Unit tests
[[test]]
name = "test_ansi_parser"
path = "tests/unit/test_ansi_parser.rs"

[[test]]
name = "test_output_processing"
path = "tests/unit/test_output_processing.rs"

[[test]]
name = "test_command_validation"
path = "tests/unit/test_command_validation.rs"

# Test utilities
[[test]]
name = "test_mock_pty"
path = "tests/test_utils/mock_pty.rs"

[[test]]
name = "test_mock_terminal"
path = "tests/test_utils/mock_terminal.rs"

[[test]]
name = "test_fixtures"
path = "tests/test_utils/fixtures.rs"

# Property-based tests
[[test]]
name = "test_ansi_parser_props"
path = "tests/proptest/test_ansi_parser_props.rs"

[[test]]
name = "test_command_validation_props"
path = "tests/proptest/test_command_validation_props.rs"

[[test]]
name = "test_output_processing_props"
path = "tests/proptest/test_output_processing_props.rs"

[profile.dev]
opt-level = 1
debug = true
overflow-checks = true
incremental = true

[profile.dev-release]
inherits = "release"
opt-level = 2
debug = true
lto = false
codegen-units = 4
panic = "unwind"

[profile.release]
opt-level = 3
debug = false
lto = true
codegen-units = 1
panic = "abort"
strip = true
