[package]
name = "mosaicterm"
version = "0.1.0"
edition = "2021"
authors = ["MosaicTerm Team"]
description = "A Rust GUI terminal emulator inspired by Warp with block-based command history"
license = "MIT OR Apache-2.0"
keywords = ["terminal", "emulator", "gui", "rust", "cli"]
categories = ["command-line-utilities", "gui"]
repository = "https://github.com/your-repo/mosaicterm"
homepage = "https://github.com/your-repo/mosaicterm"

[dependencies]
# GUI Framework
egui.workspace = true
eframe.workspace = true

# PTY and Terminal
portable-pty.workspace = true
vte.workspace = true

# Serialization and Configuration
serde.workspace = true
serde_json.workspace = true
toml.workspace = true

# Async Runtime
tokio.workspace = true
futures.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true

# Utility
anyhow.workspace = true
thiserror.workspace = true
regex.workspace = true
uuid.workspace = true
chrono.workspace = true
dirs.workspace = true
nix.workspace = true

[dev-dependencies]
# Testing
tokio-test.workspace = true
tempfile.workspace = true
